crates/ruff_python_parser/tests/snapshots/invalid_syntax@except_stmt_unparenthesized_tuple_as.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/except_stmt_unparenthesized_tuple_as.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..86,
        body: [
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 0..42,
                    inner: StmtTryInner {
                        body: [
                            Pass(
                                StmtPass {
                                    node_index: NodeIndex(None),
                                    range: 9..13,
                                },
                            ),
                        ],
                        handlers: [
                            ExceptHandler(
                                ExceptHandlerExceptHandler {
                                    range: 14..42,
                                    node_index: NodeIndex(None),
                                    type_: Some(
                                        Tuple(
                                            ExprTuple {
                                                node_index: NodeIndex(None),
                                                range: 21..25,
                                                elts: [
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 21..22,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 24..25,
                                                            id: Name("y"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ],
                                                ctx: Load,
                                                parenthesized: false,
                                            },
                                        ),
                                    ),
                                    name: Some(
                                        Identifier {
                                            id: Name("exc"),
                                            range: 29..32,
                                            node_index: NodeIndex(None),
                                            parameter_node_index: NodeIndex(None),
                                        },
                                    ),
                                    body: [
                                        Pass(
                                            StmtPass {
                                                node_index: NodeIndex(None),
                                                range: 38..42,
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ],
                        orelse: [],
                        finalbody: [],
                        is_star: false,
                    },
                },
            ),
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 43..85,
                    inner: StmtTryInner {
                        body: [
                            Pass(
                                StmtPass {
                                    node_index: NodeIndex(None),
                                    range: 52..56,
                                },
                            ),
                        ],
                        handlers: [
                            ExceptHandler(
                                ExceptHandlerExceptHandler {
                                    range: 57..85,
                                    node_index: NodeIndex(None),
                                    type_: Some(
                                        Tuple(
                                            ExprTuple {
                                                node_index: NodeIndex(None),
                                                range: 65..69,
                                                elts: [
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 65..66,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 68..69,
                                                            id: Name("y"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ],
                                                ctx: Load,
                                                parenthesized: false,
                                            },
                                        ),
                                    ),
                                    name: Some(
                                        Identifier {
                                            id: Name("eg"),
                                            range: 73..75,
                                            node_index: NodeIndex(None),
                                            parameter_node_index: NodeIndex(None),
                                        },
                                    ),
                                    body: [
                                        Pass(
                                            StmtPass {
                                                node_index: NodeIndex(None),
                                                range: 81..85,
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ],
                        orelse: [],
                        finalbody: [],
                        is_star: true,
                    },
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | try:
2 |     pass
3 | except x, y as exc:
  |        ^^^^ Syntax Error: Multiple exception types must be parenthesized when using `as`
4 |     pass
5 | try:
  |


  |
5 | try:
6 |     pass
7 | except* x, y as eg:
  |         ^^^^ Syntax Error: Multiple exception types must be parenthesized when using `as`
8 |     pass
  |
